updated custom text font Lato so that it actually works; Fixed some intent issue in index.html; removed broken css parts.

--- a/content/app/home/css/general_style.css
+++ b/content/app/home/css/general_style.css
@@ -20,7 +20,7 @@ p {
 }
 
 .text_font {
-	font-family: LatoRegular, Lato,sans-serif;
+	font-family: "Lato";
 	text-decoration:none;
 	color: black;
 	font-size: 17px;
@@ -28,14 +28,14 @@ p {
 }
 
 .text_font_large {
-	font-family: LatoRegular, Lato,sans-serif;
+	font-family: "Lato";
 	text-decoration:none;
 	color: black;
 	font-size: 20px;
 }
 
 .text_font_small {
-	font-family: LatoRegular, Lato,sans-serif;
+	font-family: "Lato";
 	text-decoration:none;
 	color: black;
 	font-size: 12px;
@@ -50,11 +50,11 @@ p {
 }
 
 .align_central {
-	style:margin: 0 auto;
+	margin: 0 auto;
 }
 
 body.text_font {
-	font-family: "LatoRegular", Lato,sans-serif;
+	font-family: "Lato";
 	color: black;
 }
 
@@ -79,14 +79,14 @@ div.left_margin {
 }
 
 div.header_font {
-	font-family: "LatoRegular", Lato,sans-serif;
+	font-family: "Lato";
 	font-size: 15px;
 	color:black;
 	padding: 5px 8px;
 }
 
 a.text_center {
-	font-family: "LatoRegular", Lato,sans-serif;
+	font-family: "Lato";
 	text-decoration:none;
 	color: white;
 	font-size: 23px;
@@ -95,7 +95,7 @@ a.text_center {
 }
 
 a.text_center_readmore {
-	font-family: "LatoRegular", Lato,sans-serif;
+	font-family: "Lato";
 	text-decoration:none;
 	color: black;
 	font-size: 20px;
